# SD-Distributed-File-Search

./: README.md
orchestrator/: CMakeLists.txt  main.cpp
orchestrator/include/Cache/: ICache.h  LRUCache.h
orchestrator/include/Config/: WorkerConfig.h
orchestrator/include/Controller/: SearchController.h
orchestrator/source/Controller/: SearchController.cpp
worker/: CMakeLists.txt  worker.cpp
worker/include/Controller/: SearchController.h
worker/include/DTO/: FileDTO.h
worker/include/FileScraper/: FileScraper.h  IFileIgnorer.h  IFileScraper.h  RegexFileIgnorer.h
worker/source/Controller/: SearchController.cpp
worker/source/DTO/: FileDTO.cpp
worker/source/FileScraper/: FileScraper.cpp  RegexFileIgnorer.cpp
